crates/kul-wasm/tests/snapshots/export_graph__example_13_inter_family_marriage_with_positions.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "rajesh",
        "name": "Rajesh Patel",
        "gender": "male",
        "born": {
          "value": "1920-04-11",
          "precision": "day",
          "circa": false
        },
        "span": [
          1326,
          1392
        ]
      },
      {
        "id": "saroj",
        "name": "Saroj Patel",
        "gender": "female",
        "born": {
          "value": "1923-09-02",
          "precision": "day",
          "circa": false
        },
        "span": [
          1393,
          1459
        ]
      },
      {
        "id": "mahesh",
        "name": "Mahesh Sharma",
        "gender": "male",
        "born": {
          "value": "1921-07-19",
          "precision": "day",
          "circa": false
        },
        "span": [
          1553,
          1620
        ]
      },
      {
        "id": "lata",
        "name": "Lata Sharma",
        "gender": "female",
        "born": {
          "value": "1924-02-28",
          "precision": "day",
          "circa": false
        },
        "span": [
          1621,
          1688
        ]
      },
      {
        "id": "alice",
        "name": "Alice Patel",
        "gender": "female",
        "born": {
          "value": "1948-03-22",
          "precision": "day",
          "circa": false
        },
        "span": [
          1808,
          1895
        ]
      },
      {
        "id": "bob",
        "name": "Bob Sharma",
        "gender": "male",
        "born": {
          "value": "1949-11-30",
          "precision": "day",
          "circa": false
        },
        "span": [
          1896,
          1982
        ]
      },
      {
        "id": "kiran",
        "name": "Kiran Patel",
        "gender": "female",
        "born": {
          "value": "1975-04-18",
          "precision": "day",
          "circa": false
        },
        "span": [
          2072,
          2156
        ]
      }
    ],
    "marriages": [
      {
        "id": "m_host_parents",
        "spouses": [
          "rajesh",
          "saroj"
        ],
        "start": {
          "value": "1945-12-05",
          "precision": "day",
          "circa": false
        },
        "span": [
          1460,
          1514
        ]
      },
      {
        "id": "m_bob_parents",
        "spouses": [
          "mahesh",
          "lata"
        ],
        "start": {
          "value": "1946-08-14",
          "precision": "day",
          "circa": false
        },
        "span": [
          1689,
          1741
        ]
      },
      {
        "id": "m_alice_bob",
        "spouses": [
          "alice",
          "bob"
        ],
        "start": {
          "value": "1972-06-10",
          "precision": "day",
          "circa": false
        },
        "span": [
          1984,
          2032
        ]
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_host_parents",
        "childId": "alice",
        "kind": "biological",
        "span": [
          1875,
          1895
        ]
      },
      {
        "marriageId": "m_bob_parents",
        "childId": "bob",
        "kind": "biological",
        "span": [
          1963,
          1982
        ]
      },
      {
        "marriageId": "m_alice_bob",
        "childId": "kiran",
        "kind": "biological",
        "span": [
          2139,
          2156
        ]
      }
    ]
  }
}
