crates/kul-wasm/tests/snapshots/export_graph__example_14_grand_nested_inter_family.snap
---
source: crates/kul-wasm/tests/export_graph.rs
expression: json
---
{
  "ok": true,
  "schema": 1,
  "kul": "0.1",
  "graph": {
    "persons": [
      {
        "id": "rajesh",
        "name": "Rajesh Patel",
        "gender": "male",
        "born": {
          "value": "1900-04-11",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "saroj",
        "name": "Saroj Patel",
        "gender": "female",
        "born": {
          "value": "1903-09-02",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "ramprasad",
        "name": "Ramprasad Verma",
        "gender": "male",
        "born": {
          "value": "1898-01-17",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "sunita",
        "name": "Sunita Verma",
        "gender": "female",
        "born": {
          "value": "1902-06-23",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "mahesh",
        "name": "Mahesh Sharma",
        "gender": "male",
        "born": {
          "value": "1921-07-19",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "lata",
        "name": "Lata Sharma",
        "gender": "female",
        "born": {
          "value": "1924-02-28",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "alice",
        "name": "Alice Patel",
        "gender": "female",
        "born": {
          "value": "1948-03-22",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "bob",
        "name": "Bob Sharma",
        "gender": "male",
        "born": {
          "value": "1949-11-30",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "kiran",
        "name": "Kiran Patel",
        "gender": "female",
        "born": {
          "value": "1975-04-18",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "marriages": [
      {
        "id": "m_host_parents",
        "spouses": [
          "rajesh",
          "saroj"
        ],
        "start": {
          "value": "1925-12-05",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_lata_parents",
        "spouses": [
          "ramprasad",
          "sunita"
        ],
        "start": {
          "value": "1923-04-30",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_bob_parents",
        "spouses": [
          "mahesh",
          "lata"
        ],
        "start": {
          "value": "1946-08-14",
          "precision": "day",
          "circa": false
        }
      },
      {
        "id": "m_alice_bob",
        "spouses": [
          "alice",
          "bob"
        ],
        "start": {
          "value": "1972-06-10",
          "precision": "day",
          "circa": false
        }
      }
    ],
    "parenthoodLinks": [
      {
        "marriageId": "m_lata_parents",
        "childId": "lata",
        "kind": "biological"
      },
      {
        "marriageId": "m_host_parents",
        "childId": "alice",
        "kind": "biological"
      },
      {
        "marriageId": "m_bob_parents",
        "childId": "bob",
        "kind": "biological"
      },
      {
        "marriageId": "m_alice_bob",
        "childId": "kiran",
        "kind": "biological"
      }
    ]
  }
}
